5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1808_2584.log
== TEST (2019-06-12 23:15:13) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(i % 2 == 0):
		k = k *(-1)
	H = x + k
print(H)
	
-- OUTPUT:
0.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:47) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(N % 2 == 0):
		k = k *(-1)
	H = x + k
print(H)
	
-- OUTPUT:
1.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:16:09) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(i % 2 == 0):
		k = k *(-1)
	H = x + k
print(H)
	
-- OUTPUT:
0.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:17:04) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(i % 2 == 0):
		k = k *(-1)
	H = x + k
print(H)
	
-- EXECUTION TIME:
0.793372
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
0.75
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
1.0526315789473684
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:56:27) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(i % 2 == 0):
		k = k *(-1)
	x = x + k
print(H)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(H)
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:56:54) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(i % 2 == 0):
		k = k *(-1)
	x = x + k
print(x)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:57:19) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(i % 2 == 0):
		k = k *(-1)
	x = x + k
print(x)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:57:42) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	k = 1/i
	if(i % 2 == 0):
		k = k *(-1)
	x = x + k
print(x)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:59:32) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(i % 2 == 0):
		k = (1/i) *(-1)
	elif(i % 2 == 1):
		k = 1/i
	x = x + k
print(x)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:00:07) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(i % 2 == 0):
		k = (1/i) *(-1)
	elif(i % 2 == 1):
		k = 1/i
	x = x + k
print(x)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:00:14) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(i % 2 == 0):
		k = (1/i) *(-1)
	elif(i % 2 == 1):
		k = 1/i
	x = x + k
print(x)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:00:39) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(N % 2 == 0):
		k = (1/i) *(-1)
	elif(N % 2 == 1):
		k = 1/i
	x = x + k
print(x)
	
-- OUTPUT:
2.083333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:01:22) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(N % 2 == 0):
		k = (1/i) *(-1)
	elif(N % 2 == 1):
		k = 1/i
	x = x - k
print(x)
	
-- OUTPUT:
-0.08333333333333331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:01:32) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(N % 2 == 0):
		k = (1/i) *(-1)
	elif(N % 2 == 1):
		k = 1/i
	x = x - k
print(x)
	
-- OUTPUT:
-0.08333333333333331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:02:31) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(N % 2 == 0):
		k = (1/i)
	elif(N % 2 == 1):
		k = 1/i *(-1)
	x = x - k
print(x)
	
-- OUTPUT:
2.083333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:02:54) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(i % 2 == 0):
		k = (1/i)
	elif(i % 2 == 1):
		k = 1/i *(-1)
	x = x - k
print(x)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:03:01) 
-- CODE:
N = int(input("numero se termos"))
x = 1
for i in range(2,N):
	if(i % 2 == 0):
		k = (1/i)
	elif(i % 2 == 1):
		k = 1/i *(-1)
	x = x - k
print(x)
	
-- EXECUTION TIME:
0.597442
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
0.5833333333333333
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
0.718771403175428
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:05:12) 
-- CODE:
N = int(input("numero se termos"))
x = 1
o = 0
for i in range(2,N):
	if(o % 2 == 0):
		k = (1/i)
	elif(0 % 2 == 1):
		k = 1/i *(-1)
	x = x - k
	o = o + 1
print(x)
	
-- OUTPUT:
-0.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:13:53) 
-- CODE:
N = int(input("numero se termos"))
x = 1
o = 1
for i in range(2,N):
	if(o % 2 == 0):
		k = (1/i)
	elif(0 % 2 == 1):
		k = 1/i *(-1)
	x = x - k
	o = o + 1
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    x = x - k
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:18:06) 
-- CODE:
N = int(input("numero se termos"))
x = 1
o = 1
for i in range(2,N):
	if(o % 2 == 0):
		k = (1/i)
		x = x - k
	elif(0 % 2 == 1):
		k = 1/i *(-1)
		x = x - k
	o = o + 1
print(x)
	
-- OUTPUT:
0.6666666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:18:16) 
-- CODE:
N = int(input("numero se termos"))
x = 1
o = 1
for i in range(2,N):
	if(o % 2 == 0):
		k = (1/i)
		x = x - k
	elif(0 % 2 == 1):
		k = 1/i *(-1)
		x = x - k
	o = o + 1
print(x)
	
-- EXECUTION TIME:
0.804257
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
0.6666666666666667
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
-0.13325553015955485
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:32:41) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 1):
	for i in range(2,N):
		if(o % 2 == 0):
			k = (1/i)
		elif(0 % 2 == 1):
			k = 1/i *(-1)
			x = x - k
		o = o + 1
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:34:47) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 1):
	for i in range(2,N):
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    H = H - k
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:34:59) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 1):
	for i in range(2,N):
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
print(H)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    H = H - k
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:35:45) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 1):
	for i in range(2,N):
		k = (1/i)
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
print(H)
	
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:36:03) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 1):
	for i in range(2,N):
		k = (1/i)
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
print(H)
	
-- EXECUTION TIME:
0.874497
-- TEST CASE 1:
---- input:
5
---- correct output:
H = 0.783333
---- user output:
0.5833333333333333
-- TEST CASE 2:
---- input:
20
---- correct output:
H = 0.668771
---- user output:
0.718771403175428
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:03) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 1):
	for i in range(2,N):
		k = (1/i)
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
	print(H)
else:
	print(H)
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:11) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 1):
	for i in range(2,N):
		k = (1/i)
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
	print(H)
else:
	print(H)
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:37) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 0):
	for i in range(2,N):
		k = (1/i)
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
	print(H)
else:
	print(H)
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:44:08) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
if (N > 0):
	for i in range(1,N):
		k = (1/i)
		if(o % 2 == 0):
			k = (1/i) * (-1)
		elif(0 % 2 == 1):
			k = 1/i
		H = H - k
		o = o + 1
	print(H)
else:
	print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:11) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 0):
		k = (1/i) * (-1)
	elif(0 % 2 == 1):
		k = 1/i
	H = H - k
	o = o + 1
	print(H)
-- OUTPUT:
0.0
0.5
0.16666666666666669
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:23) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 0):
		k = (1/i) * (-1)
	elif(0 % 2 == 1):
		k = 1/i
	H = H - k
	o = o + 1
	print(H)
-- OUTPUT:
0.0
0.5
0.16666666666666669
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:31) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 0):
		k = (1/i) * (-1)
	elif(0 % 2 == 1):
		k = 1/i
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:36) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 0):
		k = (1/i) * (-1)
	elif(0 % 2 == 1):
		k = 1/i
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:43) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 0):
		k = (1/i) * (-1)
	elif(0 % 2 == 1):
		k = 1/i
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:57:57) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 0):
		k = (1/i) * (-1)
	elif(0 % 2 == 1):
		k = 1/i
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:58:14) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 0):
		k = (1/i) * (-1)
	elif(0 % 2 == 1):
		k = 1/i
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:59:28) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(o % 2 == 1):
		k = 1/i
	elif(0 % 2 == 0):
		k = (1/i) * (-1)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:22) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(i % 2 == 1):
		k = 1/i
	elif(i % 2 == 0):
		k = (1/i) * (-1)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:22) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(i % 2 == 1):
		k = 1/i
	elif(i % 2 == 0):
		k = (1/i) * (-1)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:32) 
-- CODE:
N = int(input("numero se termos"))
H = 1.0
o = 1
for i in range(1,N):
	k = (1/i)
	if(i % 2 == 1):
		k = 1/i
	elif(i % 2 == 0):
		k = (1/i) * (-1)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.4166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:06) 
-- CODE:
N = int(input("numero se termos"))
H = 0
o = 1
for i in range(1,N):
	k = (1/i)
	if(i % 2 == 1):
		k = 1/i
	elif(i % 2 == 0):
		k = (1/i) * (-1)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
-0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:59) 
-- CODE:
N = int(input("numero se termos"))
H = 0
o = 1
for i in range(1,N):
	k = (1/i)
	if(i % 2 == 1):
		k = 1/i
	elif(i % 2 == 0):
		k = (1/i) * (-1)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
-0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:02:08) 
-- CODE:
N = int(input("numero se termos"))
H = 0
o = 1
for i in range(1,N):
	k = (1/i)
	if(i % 2 == 1):
		k = 1/i
	elif(i % 2 == 0):
		k = (1/i) * (-1)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
-0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:03:22) 
-- CODE:
N = int(input("numero se termos"))
H = 0
o = 1
for i in range(1,N):
	k = (1/i)
	if(i % 2 == 1):
		k = 1/i * (-1)
	elif(i % 2 == 0):
		k = (1/i)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:03:56) 
-- CODE:
N = int(input("numero se termos"))
H = 0
o = 1
for i in range(1,N):
	k = (1/o)
	if(i % 2 == 1):
		k = 1/o * (-1)
	elif(i % 2 == 0):
		k = (1/o)
	H = H - k
	o = o + 1
print(H)
-- OUTPUT:
0.5833333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
